src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_9_errors.snap
---
source: src/parser/test.rs
description: "if (x) { x + } else { x - 1; }"
expression: "parser_errors(\"if (x) { x + } else { x - 1; }\", errors)"
---
if (x) { x + } else { x - 1; }
           ^ SyntaxError: Unexpected '}'.
